@@ -1,3 +1,9 @@
+2006-10-26 Erwann Chenede - <erwann.chenede@sun.com>
+
+	* gui/greeter/greeter_parser.c: introduced altfile[n] property
+	  to cater for alternate image file definition.
+	* docs/C/gdm.xml: added documentation for the new property.
+
 2006-10-23  Brian Cameron  <brian.cameron@sun.com>
 
 	* docs/C/gdm.xml: Corrections to spelling and grammar mistakes.
